<resources>
    <string name="app_name">Informator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title">Menu Główne</string>
    <string name="timetable">Rozkład jazdy</string>
    <string name="weather">Pogoda</string>
    <string name="events">Wydarzenia</string>
    <string name="offers">Oferty</string>
    <string name="notice_board">Tablica ogłoszeń</string>
    <string name="offices">Urzędy</string>
    <string name="post_offices">Urzędy pocztowe</string>
    <string name="government_offcies">Urzędy państwowe</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="opening_hours">Godziny otwarcia</string>
    <string name="add_notice">Dodaj ofertę</string>
    <string name="notice_title">Tytuł oferty</string>
    <string name="price">Cena</string>
    <string name="description">Opis</string>
    <string name="photos">Zdjęcia</string>
    <string name="add_photos">Kliknij, aby dodać zdjęcia</string>
    <string name="publish_notice">Opublikuj ofertę</string>
    <string name="notice">Ogłoszenie</string>
    <string name="edit_notice">Edytuj ofertę</string>
    <string name="tomorrow">Jutro</string>
    <string name="overmorrow">Pojutrze</string>
    <string name="today">Dzisiaj</string>
    <string name="celciusz">℃</string>
    <string name="line_distribution">Rozkłady linii</string>
    <string name="set_route">Wyznacz trasę</string>
    <string name="check_offer">Sprawdź ofertę</string>
    <string name="monday_shortcut">Pn</string>
    <string name="tuesday_shortcut">Wt</string>
    <string name="wednesday_shortcut">Śr</string>
    <string name="thursday_shortcut">Cz</string>
    <string name="friday_shortcut">Pt</string>
    <string name="saturday_shortcut">So</string>
    <string name="sunday_shortcut">Nd</string>
    <string name="last_month">Poprzedni miesiąc</string>
    <string name="next_month">Następny miesiąc</string>
    <string name="working_days">Dni robocze</string>
    <string name="free_working_days">Dni robocze wolne od nauki</string>
    <string name="saturdays">Soboty</string>
    <string name="sundaysAndBreaks">Niedziele i święta</string>
    <string name="change_direction">Zamień kierunek</string>
    <string name="show_map">Wyświetl mapę</string>
    <string name="arrow_right_key_symbol">►</string>
    <string name="phone">Telefon</string>
    <string name="contact">Kontakt</string>
    <string name="cd_main_background">Główne tło</string>
    <string name="cd_menu_button">Przycisk menu</string>
    <string name="cd_icon_notice_title">Ikonka tytuł oferty</string>
    <string name="_0from30">0/30</string>
    <string name="cd_icon_notice_price">Ikonka cena</string>
    <string name="cd_icon_notice_desc">Ikonka opis</string>
    <string name="_0from1000">0/1000</string>
    <string name="cd_icon_notice_images">Ikonka zdjęć</string>
    <string name="dc_decline_notice">Anuluj tworzenie oferty</string>
    <string name="cd_icon_events">Ikonka wydarzenia</string>
    <string name="cd_event_image">Zdjęcie wydarzenia</string>
    <string name="cd_more_info">Przycisk więcej informacji</string>
    <string name="cd_icon_line_type">Ikonka rodzaju linii</string>
    <string name="cd_icon_add_notice">Przycisk dodaj ofertę</string>
    <string name="cd_button_phone_call">Przycisk zadzwoń do tego numeru</string>
    <string name="cd_button_send_sms">Przycisk wyślisz sms</string>
    <string name="cd_button_last_month">Przycisk poprzedni miesiąc</string>
    <string name="cd_button_next_month">Przycisk następny miesiąc</string>
    <string name="cd_button_change_direction">Przycisk zamień kierunek</string>
    <string name="cd_button_show_map">Przycisk wyświetl mapę</string>
    <string name="cd_notice_photo">Zdjęcie ogłoszenia</string>
    <string name="cd_photo_chose_destination">Zdjęcie wyznacz trasę</string>
    <string name="cd_button_chose_destination">Przycisk wyznacz trasę</string>
    <string name="cd_photo_lines">Zdjęcie rozkładów linii</string>
    <string name="cd_button_lines">Przycisk rozkłady linii</string>
    <string name="cd_icon_logo_photo">Ikonka loga firmy</string>
    <string name="cd_offer_photo">Zdjęcie oferty</string>
    <string name="image_placeholder_text">Coś tu pusto</string>
    <string name="cd_add_image">dodane zdjęcie</string>
    <string name="cancel">Anuluj</string>
    <string name="next">DALEJ</string>
    <string name="ok">OK</string>
    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="route_map">Mapa Trasy</string>
    <string name="show_line">Wyświetl linię</string>
    <string name="departure_time">Czas odjazdu</string>
    <string name="super_next">Dalej!</string>
    <string name="closest_bus_station">Najbliższy przystanek</string>
    <string name="done">Gotowe</string>
    <string name="start_location">Lokalizacja początkowa</string>
    <string name="end_location">Lokalizacja końcowa</string>
</resources>
