<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/horizontal_main_gradient"
        >
        <TextView
            android:id="@+id/date_display_date"
            android:layout_width="match_parent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_wydarzenia"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBlackLight"
        android:weightSum="7"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarDayName"
            android:text="@string/monday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarDayName"
            android:text="@string/tuesday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarDayName"
            android:text="@string/wednesday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarDayName"
            android:text="@string/thursday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarDayName"
            android:text="@string/friday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:text="@string/saturday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorGradientEnd"
            android:text="@string/sunday_shortcut"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            />
    </LinearLayout>
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:verticalSpacing="2dp"
        android:background="@color/colorBlackLight"
        android:paddingBottom="4dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <Button
            android:contentDescription="@string/cd_button_last_month"
            android:id="@+id/calendar_prev_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:textAllCaps="false"
            android:background="@drawable/white_ripple"
            android:backgroundTint="@color/colorBlackOffers"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/last_month"
            android:layout_weight="1"
            />
        <Button
            android:contentDescription="@string/cd_button_next_month"
            android:id="@+id/calendar_next_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorWhite"
            android:text="@string/next_month"
            android:background="@drawable/gradient_with_ripple"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>