<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="pl.android.informator.ui.timetable.line_timetables.single_line.SingleLineViewModel" />
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.timetable.line_timetables.single_line.SingleLineFragment">
    <LinearLayout
        android:id="@+id/single_line_main_info"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/horizontal_main_gradient"
            android:text="@{viewModel.lineNumber}"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:id="@+id/post_office_main_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@{viewModel.lineName}"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_right_key_symbol"
                    android:textColor="@color/colorGradientEnd"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="6dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/post_office_secondary_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@{viewModel.lineDestination}"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/bus_stop_container"
        android:layout_below="@id/single_line_main_info"
        android:layout_width="match_parent"
        android:layout_above="@id/single_line_buttons"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/bus_stop_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/single_line_buttons"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:contentDescription="@string/cd_button_change_direction"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorBlackLight"
            android:background="@drawable/white_ripple"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawableStart="@drawable/ic_zamien"
            android:text="@string/change_direction"
            android:onClick="@{() -> viewModel.onChangeClick()}"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:textAllCaps="false"
            />
        <Button
            android:contentDescription="@string/cd_button_show_map"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_with_ripple"
            android:text="@string/show_map"
            android:onClick="@{() -> viewModel.onShowMapClick()}"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            />
    </LinearLayout>
</RelativeLayout>
</layout>
