<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.android.informator.ui.notice_board.NoticeBoardFragment"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="pl.android.informator.ui.notice_board.notice_details.NoticeDetailsFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/horizontal_main_gradient">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat"
                    android:text="@{viewModel.title}"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/notice_details_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:dots="@{viewModel.viewPager}"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableStart="@drawable/ic_cena"
                    android:drawablePadding="12dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/price"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="24sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:fontFamily="@font/montserrat"
                    android:text="@{viewModel.price}"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="24sp" />
            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/ic_opis"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/description"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@{viewModel.desc}"
                android:textColor="@color/colorNoticeDescGray"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:drawableStart="@drawable/ic_telefon"
                    android:drawablePadding="12dp"
                    android:text="@string/contact"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextBlack"
                    />
                <Button
                    android:contentDescription="@string/cd_button_phone_call"
                    android:layout_width="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/square_phone_with_ripple"
                    android:layout_height="48dp"
                    android:onClick="@{()->viewModel.onPhoneClick()}"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    />
                <Button
                    android:contentDescription="@string/cd_button_send_sms"
                    android:layout_width="48dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:onClick="@{()->viewModel.onMessageClick()}"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/square_message_with_ripple"
                    android:layout_height="48dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/notice_details_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/gradient_with_ripple"
                android:fontFamily="@font/montserrat"
                android:onClick="@{() -> viewModel.onEditClick()}"
                android:text="@string/edit_notice"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
    <data>

        <variable
            name="viewModel"
            type="pl.android.informator.ui.notice_board.notice_details.NoticeDetailsViewModel" />
    </data>
</layout>
